Add pgSQL schema and update codegen. (#13)
